--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           <a href="#about">About</a>
           <a href="#guarantee">Guarantee</a>
           <a href="#contact" class="btn btn-primary">Start Now</a>
+          <span class="lang-switch">
+            <a href="index.html" class="active">EN</a>
+            <a href="he.html">HE</a>
+          </span>
         </nav>
       </div>
     </header>
@@ -181,7 +185,7 @@
             <span class="icon-wrap"><svg class="icon"><use href="#icon-globe"/></svg></span>
             <div>
               <strong>Website</strong>
-              <div>www.DanielRimmer.com</div>
+              <div>www.danielrimmer.com</div>
             </div>
           </a>
           <a class="contact-card" href="https://wa.me/972533191655" target="_blank" rel="noopener">
@@ -207,7 +211,7 @@
           <span>•</span>
           <a href="mailto:contact@danielrimmer.com">contact@danielrimmer.com</a>
           <span>•</span>
-          <a href="https://www.DanielRimmer.com" target="_blank" rel="noopener">www.DanielRimmer.com</a>
+          <a href="https://www.danielrimmer.com" target="_blank" rel="noopener">www.danielrimmer.com</a>
         </div>
       </div>
     </footer>
