--- a/he.html
+++ b/he.html
@@ -74,7 +74,9 @@
             <a href="#story" class="btn btn-ghost">קראו את הסיפור</a>
           </div>
         </div>
-        <div class="hero-visual" aria-hidden="true"></div>
+        <div class="hero-visual" aria-hidden="true">
+          <img src="images/photographer.png" alt="צלם שבונה אתר בעצמו" class="hero-image" />
+        </div>
       </section>
 
       <section id="story" class="section container reveal">
@@ -156,7 +158,7 @@
             <span class="icon-wrap"><svg class="icon"><use href="#icon-globe"/></svg></span>
             <div>
               <strong>אתר</strong>
-              <div>www.DanielRimmer.com</div>
+              <div>www.danielrimmer.com</div>
             </div>
           </a>
           <a class="contact-card" href="https://wa.me/972533191655" target="_blank" rel="noopener">
@@ -182,7 +184,7 @@
           <span>•</span>
           <a href="mailto:contact@danielrimmer.com">contact@danielrimmer.com</a>
           <span>•</span>
-          <a href="https://www.DanielRimmer.com" target="_blank" rel="noopener">www.DanielRimmer.com</a>
+          <a href="https://www.danielrimmer.com" target="_blank" rel="noopener">www.danielrimmer.com</a>
         </div>
       </div>
     </footer>
