--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
           <h1>
             Photographer With No Experience In Coding, Using a Six-Year-Old Computer, Built a Full, Professional Website for His Business in Just Five Days…
           </h1>
-          <p class="lead">…And He Is Not a Genius — I Know Him. Sounds impossible? Meet <strong>Yair Rosenberg</strong>.</p>
+          <p class="lead">Sounds impossible? Meet <strong>Yair Rosenberg</strong>.</p>
           <div class="hero-cta">
             <a href="#contact" class="btn btn-primary">Build Your Site This Week</a>
             <a href="#story" class="btn btn-ghost">Read the story</a>
           </div>
         </div>
-        <div class="hero-visual" aria-hidden="true"></div>
+        <div class="hero-visual" aria-hidden="true">
+          <img src="images/photographer.png" alt="Photographer building his own website" class="hero-image" />
+        </div>
       </section>
 
       <section id="story" class="section container reveal">
@@ -89,7 +91,7 @@
             I showed Yair how he could build his own professional website in less than a week. After just a few hours of guidance, setting up the right tools and accounts, Yair did it — all by himself. Today, his website doesn’t just look professional… it looks better than many built by web developers.
           </p>
           <p class="check-it">
-            👉 Check it yourself: <a href="https://www.YairRosenberg.co.il" target="_blank" rel="noopener">www.YairRosenberg.co.il</a>
+            👉 Check it yourself: <a href="https://www.yairosenberg.co.il" target="_blank" rel="noopener">www.yairrosenberg.co.il</a>
           </p>
         </div>
       </section>
