--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
           </div>
         </div>
         <div class="hero-visual" aria-hidden="true">
-          <img src="images/photographer.png" alt="Photographer building his own website" class="hero-image" />
+          <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="images/photographer.png">
+            <source src="images/video-photographer.mp4" type="video/mp4" />
+          </video>
         </div>
       </section>
 
@@ -121,14 +123,29 @@
           <div class="option">
             <h3>🏫 In-person class</h3>
             <p>Jerusalem area</p>
+            <div id="InPersonClass">
+              <video class="zoom-video" autoplay muted loop playsinline preload="auto">
+                <source src="images/jerusalem-classes.mp4" type="video/mp4" />
+              </video>
+            </div>
           </div>
           <div class="option">
             <h3>💻 Live on Zoom</h3>
             <p>Interactive, guided sessions</p>
+            <div id="LiveOnZoom">
+              <video class="zoom-video" autoplay muted loop playsinline preload="auto">
+                <source src="images/zoom-lessoms.mp4" type="video/mp4" />
+              </video>
+            </div>
           </div>
           <div class="option">
             <h3>🏠 Private at your home</h3>
-            <p>For an additional fee, I can come directly to your home for private, one-on-one lessons.</p>
+            <p>I come to you one-on-one (additional fee).</p>
+            <div id="PrivateAtHome">
+              <video class="zoom-video" autoplay muted loop playsinline preload="auto">
+                <source src="images/private-classes.mp4" type="video/mp4" />
+              </video>
+            </div>
           </div>
         </div>
         <p>Whichever option you choose, you’ll get clear, step-by-step, practical instruction that’s easy to follow — even for complete beginners.</p>
@@ -161,7 +178,7 @@
       <section id="guarantee" class="section container reveal">
         <h2>100% Satisfaction Guaranteed</h2>
         <p>
-          Try the first class — completely risk-free. If you don’t like it for any reason, you get your money back. No questions asked. That’s how confident I am in what you’ll achieve.
+          Try the first class — completely risk-free. If you don’t like it for any reason, you get your money back. No questions asked.
         </p>
       </section>
 
