--- a/he.html
+++ b/he.html
@@ -68,7 +68,7 @@
           <h1>
             צלם בלי שום ניסיון בתכנות, עם מחשב בן שש שנים, בנה אתר מקצועי ומרשים לעסק שלו — תוך חמישה ימים בלבד…
           </h1>
-          <p class="lead">…והוא לא גאון — אני מכיר אותו! נשמע בלתי אפשרי? תכירו את יאיר רוזנברג.</p>
+          <p class="lead">.נשמע בלתי אפשרי? תכירו את יאיר רוזנברג.</p>
           <div class="hero-cta">
             <a href="#contact" class="btn btn-primary">בנו את האתר השבוע</a>
             <a href="#story" class="btn btn-ghost">קראו את הסיפור</a>
