--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <a href="#story" class="btn btn-ghost">Read the story</a>
           </div>
         </div>
-        <div class="hero-visual" aria-hidden="true">
-          <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="images/photographer.png">
+        <div class="hero-visual">
+          <video class="hero-media" autoplay muted loop playsinline preload="auto">
             <source src="images/video-photographer.mp4" type="video/mp4" />
           </video>
         </div>
