--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div class="option">
             <h3>🏠 Private at your home</h3>
-            <p>I come to you one-on-one (additional fee).</p>
+            <p>I come to you one-on-one (additional fee)</p>
             <div id="PrivateAtHome">
               <video class="zoom-video" autoplay muted loop playsinline preload="auto">
                 <source src="images/private-classes.mp4" type="video/mp4" />
@@ -162,13 +162,13 @@
           <li>💪 Save thousands of shekels.</li>
           <li>💪 Learn how to maintain it yourself — no need to pay anyone again.</li>
         </ul>
-        <p>When you know how to build and manage your own website, you’re not just buying the fish — you’re getting the fishing rod. 🎣</p>
+        <p>When you know how to build and manage your own website, you’re not just buying the fish — you’re getting the fishing rod. 🎣</p> 
       </section>
 
       <section id="about" class="section container reveal">
         <h2>Who Am I?</h2>
         <p>
-          My name is <strong>Daniel Rimmer</strong>. I’m a business owner, not a programmer. I created my own brand — <strong>Rimmer’s</strong> — where I sell handmade Italian silk ties. And I built my entire website by myself. You can visit it to see what’s possible: <a href="https://www.Rimmers.shop" target="_blank" rel="noopener">www.Rimmers.shop</a>. If I could do it — without a computer degree — so can you.
+          My name is <strong>Daniel Rimmer</strong>. I’m a business owner, not a programmer. I created my own brand — <strong>Rimmer’s</strong> — where I sell handmade Italian silk ties. And I built my entire website by myself. You can visit it to see what’s possible: <a href="https://www.Rimmers.shop" target="_blank" rel="noopener">www.rimmers.shop</a>. If I could do it — without a computer degree — so can you.
         </p>
         <p>
           This program is for anyone who wants to grow his parnassah (livelihood) without wasting years or unnecessary money. It’s for photographers, craftsmen, teachers, tutors, small business owners — anyone who wants to take control of his business online.
