--- a/he.html
+++ b/he.html
@@ -91,6 +91,13 @@
         </div>
       </section>
 
+      <!-- סרטון יצירתי במסך מלא -->
+      <div id="creativity" class="section reveal visible">
+        <video class="creativity-video" autoplay muted loop playsinline preload="auto">
+          <source src="images/creativity-video.mp4" type="video/mp4" />
+        </video>
+      </div>
+
       <section id="teach" class="section container reveal">
         <h2>מה אני מלמד</h2>
         <p>אני מלמד אנשים איך לבנות אתר בעצמם מאפס, גם אם אין להם שום רקע במחשבים או בתכנות. כל מה שצריך זה מחשב רגיל, כמה שעות ביום, והדרכה צעד־אחר־צעד. הנה מה שתלמדו:</p>
