--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
         </div>
       </section>
 
+      <!-- Full-bleed creativity video -->
+      <div id="creativity" class="section reveal visible">
+        <video class="creativity-video" autoplay muted loop playsinline preload="auto">
+          <source src="images/creativity-video.mp4" type="video/mp4" />
+        </video>
+      </div>
+
       <section id="teach" class="section container reveal">
         <h2>What I Teach</h2>
         <p>
