--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
     </header>
 
     <main id="top">
+      <!-- Top-of-page full-bleed Creativity hero -->
+      <section id="creativity-hero" class="creativity-hero reveal visible" aria-label="Creativity video">
+        <video class="creativity-video" autoplay muted loop playsinline preload="auto">
+          <source src="images/creativity-video.mp4" type="video/mp4" />
+        </video>
+      </section>
+
       <section class="hero container reveal">
         <div class="hero-content">
           <h1>
@@ -97,13 +104,6 @@
           </p>
         </div>
       </section>
-
-      <!-- Full-bleed creativity video -->
-      <div id="creativity" class="section reveal visible">
-        <video class="creativity-video" autoplay muted loop playsinline preload="auto">
-          <source src="images/creativity-video.mp4" type="video/mp4" />
-        </video>
-      </div>
 
       <section id="teach" class="section container reveal">
         <h2>What I Teach</h2>
@@ -273,6 +273,21 @@
           }
         }));
       }
+
+      // Header transparency: lighter at top, darker once scrolled
+      const headerEl = document.querySelector('.site-header');
+      const updateHeader = () => {
+        if (!headerEl) return;
+        if (window.scrollY > 16) {
+          document.body.classList.remove('at-top');
+          headerEl.classList.add('scrolled');
+        } else {
+          document.body.classList.add('at-top');
+          headerEl.classList.remove('scrolled');
+        }
+      };
+      updateHeader();
+      window.addEventListener('scroll', updateHeader, { passive: true });
     </script>
   </body>
   </html>
