--- a/he.html
+++ b/he.html
@@ -92,6 +92,9 @@
       </section>
 
       <section id="teach" class="section container reveal">
+        <video class="section-bg-video" autoplay muted loop playsinline preload="auto" aria-hidden="true" poster="images/jew-coder.jpg">
+          <source src="images/jew-coder-video.mp4" type="video/mp4" />
+        </video>
         <h2>מה אני מלמד</h2>
         <p>אני מלמד אנשים איך לבנות אתר בעצמם מאפס, גם אם אין להם שום רקע במחשבים או בתכנות. כל מה שצריך זה מחשב רגיל, כמה שעות ביום, והדרכה צעד־אחר־צעד. הנה מה שתלמדו:</p>
         <ul class="feature-list">
