--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
       </section>
 
       <section id="teach" class="section container reveal">
+        <video class="section-bg-video" autoplay muted loop playsinline preload="auto" aria-hidden="true" poster="images/jew-coder.jpg">
+          <source src="images/jew-coder-video.mp4" type="video/mp4" />
+        </video>
         <h2>What I Teach</h2>
         <p>
           I teach people how to build their own websites from scratch — even if they have zero background in computers or coding. All you need is a regular computer, a few hours a day, and my step-by-step guidance. Here’s what you’ll learn:
