--- a/index.html
+++ b/index.html
@@ -281,6 +281,68 @@
         }));
       }
 
+      // Wrap header nav link text in spans per letter for hover effects
+      (function wrapHeaderNavLetters() {
+        const targets = document.querySelectorAll(
+          '#site-nav a[href="#story"],\
+           #site-nav a[href="#teach"],\
+           #site-nav a[href="#structure"],\
+           #site-nav a[href="#why"],\
+           #site-nav a[href="#about"],\
+           #site-nav a[href="#guarantee"]'
+        );
+        targets.forEach(a => {
+          if (a.dataset.charsWrapped === 'true') return;
+          const text = a.textContent;
+          const frag = document.createDocumentFragment();
+          for (const ch of text) {
+            const span = document.createElement('span');
+            span.className = 'char';
+            span.textContent = ch;
+            frag.appendChild(span);
+          }
+          a.textContent = '';
+          a.appendChild(frag);
+          a.dataset.charsWrapped = 'true';
+        });
+      })();
+
+      // Add extra spacing around the "I" in "What I Teach" so it doesn't look tight
+      (function spaceTeachI() {
+        const link = document.querySelector('#site-nav a[href="#teach"]');
+        if (!link) return;
+        const iChar = Array.from(link.querySelectorAll('.char')).find(ch => ch.textContent === 'I');
+        if (iChar) {
+          iChar.style.margin = '0 0.25em';
+        }
+      })();
+
+      // Per-letter wave effect on header nav: hovered char = 1.10, neighbors = 1.05
+      (function initHeaderNavWave() {
+        const selector = '#site-nav a[href="#story"],\
+                         #site-nav a[href="#teach"],\
+                         #site-nav a[href="#structure"],\
+                         #site-nav a[href="#why"],\
+                         #site-nav a[href="#about"],\
+                         #site-nav a[href="#guarantee"]';
+        const links = document.querySelectorAll(selector);
+        links.forEach(link => {
+          link.addEventListener('mousemove', (e) => {
+            const t = e.target;
+            if (!(t instanceof Element) || !t.classList.contains('char')) return;
+            link.querySelectorAll('.char').forEach(ch => ch.classList.remove('is-hover','is-near'));
+            t.classList.add('is-hover');
+            const prev = t.previousElementSibling;
+            const next = t.nextElementSibling;
+            if (prev && prev.classList.contains('char')) prev.classList.add('is-near');
+            if (next && next.classList.contains('char')) next.classList.add('is-near');
+          });
+          link.addEventListener('mouseleave', () => {
+            link.querySelectorAll('.char').forEach(ch => ch.classList.remove('is-hover','is-near'));
+          });
+        });
+      })();
+
       // (header transparency behavior removed — restored to original)
 
       // Typewriter effect for hero <h1> and lead, then reveal CTAs
